half product need to fix the boxing on quiz page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <div id="home" class="flex-colum flex-center">
+      <div id="home" class="flex-column flex-center">
         <h1>Are You Ready To Rumble???</h1>
-        <a href="/rumble.html class="btn">Play!</a>
-        <a href="/hightscores.html" id="high-scores-btn"
-         class="btn">High Scores!</a>
+        <a href="/rumble.html" class="btn">Play!</a>
+        <a href="/highscores.html" id="high-scores-btn" class="btn"
+          >High Scores!</a
+        >
       </div>
     </div>
     <script src="app.js"></script>
