--- a/rumble.html
+++ b/rumble.html
@@ -9,36 +9,57 @@
     <title>Rumble!</title>
   </head>
   <body>
-    <div class="contaner">
-      <div id="rumble" class="justify-center flex-colum">
+    <div class="container">
+      <div id="rumble" class="justify-center flex-column">
         <div id="hud">
           <div class="hud-item">
-            <p id="progressText" class="hud-prefix">question</p>
-            <div id="progressbar">
+            <p id="progressText" class="hud-prefix">
+              Question
+            </p>
+            <div id="progressBar">
               <div id="progressBarrFull"></div>
             </div>
           </div>
           <div class="hud-item">
-            <p class="hud-prefix">score</p>
-            <h1 class="hud-main-text" id="score">0</h1>
+            <p class="hud-prefix">
+              Score
+            </p>
+            <h1 class="hud-main-text" id="score">
+              0
+            </h1>
           </div>
         </div>
-        <h1 id="question">What is the answer to this question</h1>
+        <h1 id="question">
+          What is the answer to this question
+        </h1> 
         <div class="choice-container">
-          <p class="choice-prefix">A</p>
-          <p class="choice-text" data-number="1">choice 1</p>
-          <div id="question">What is the answer to this question</div>
+          <p class="choice-prefix">
+            A
+          </p>
+          <p class="choice-text" data-number="1">
+            Choice 1
+          </p>
           <div class="choice-container">
-            <p class="choice-prefix">B</p>
-            <p class="choice-text" data-number="2">choice 2</p>
-            <div id="question">What is the answer to this question</div>
+            <p class="choice-prefix">
+              B
+            </p>
+            <p class="choice-text" data-number="2">
+              Choice 2
+            </p>
             <div class="choice-container">
-              <p class="choice-prefix">C</p>
-              <p class="choice-text" data-number="3">choice 3</p>
-              <div id="question">What is the answer to this question</div>
+              <p class="choice-prefix">
+                C
+              </p>
+              <p class="choice-text" data-number="3">
+                Choice 3
+              </p>
               <div class="choice-container">
-                <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">choice 4</p>
+                <p class="choice-prefix">
+                  D
+                </p>
+                <p class="choice-text" data-number="4">
+                  Choice 4
+                </p>
         </div>
       </div>
     </div>
