finished leader board page

--- a/end.html
+++ b/end.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>End of Quiz!</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div id="end" class="flex-center flex-column">
-        <h1 id="finaleScore">
-          0
-          <form class="end-form-container">
-            <h2 id="end-text">Enter Your Name Bellow!</h2>
-            <input
-              type="text"
-              name="name"
-              id="username"
-              placeholder="Enter  your Name!"
-            />
-            <button
-              class="btn"
-              id="saveScoreBtn"
-              type="submit"
-              onClick="saveScore(event)"
-              disable
-            >
-              Save
-            </button>
-          </form>
-          <a href="/game.html" class="btn">Play Again?</a>
-          <a href="/" class="btn"> End Game?</a>
-        </h1>
+        <h1 id="finaleScore">0</h1>
+        <form class="end-form-container">
+          <h2 id="end-text">Enter Your Name Below!</h2>
+          <input
+            type="text"
+            name="name"
+            id="username"
+            placeholder="Enter  your Name!"
+          />
+          <button
+            class="btn"
+            id="saveScoreBtn"
+            type="submit"
+            onClick="saveHighScore(event)"
+            disable
+          >
+            Save
+          </button>
+        </form>
+        <a href="/index.html" class="btn">Play Again?</a>
+        <a href="/" class="btn"> Go Home?</a>
       </div>
     </div>
-    <script> src="end.js"</script>
+    <script>
+      src = "high-scores.js";
+    </script>
   </body>
 </html>
