--- a/high-scores.html
+++ b/high-scores.html
@@ -16,8 +16,6 @@
         <a href="/" class="btn">Go Home!</a>
       </div>
     </div>
-    <script>
-      src = "high-scores.js";
-    </script>
+    <script>src = "high-scores.js"</script>
   </body>
 </html>
