--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <div id="home" class="flex-column flex-center">
         <h1>Are you ready to rumble!!!!</h1>
         <a href="/rumble.html" class="btn">Play</a>
-        <a href="/highscores.html" id="high-score-btn" class="btn"
-          >High Scores</a>
+        <a href="/high-scores.html" id="high-score-btn" class="btn"
+          >High Scores</a
+        >
       </div>
     </div>
   </body>
