--- a/rumble.html
+++ b/rumble.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="rumble.css" />
   </head>
   <body>
+    <h2 class="time main" style="text-align: center; margin-top: 0rem;"</h2></h2>
     <div class="container">
       <div id="game" class="justify-center flex-column">
         <div id="hud">
