put everything in folders

--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>End of Quiz!</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="container">
@@ -29,12 +29,12 @@
             Save
           </button>
         </form>
-        <a href="/index.html" class="btn">Play Again?</a>
+        <a href="./assets/index.html" class="btn">Play Again?</a>
         <a href="/" class="btn"> Go Home?</a>
       </div>
     </div>
     <script>
-      src = "high-scores.js";
+      src = "./high-scores.js";
     </script>
   </body>
 </html>
