--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz that will blow your mind?</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="container">
       <div id="home" class="flex-column flex-center">
         <h1>Are you ready to rumble!!!!</h1>
-        <a href="/rumble.html" class="btn">Play</a>
-        <a href="/high-scores.html" id="high-score-btn" class="btn"
+        <a href="./rumble.html" class="btn">Play</a>
+        <a href="./high-scores.js" id="high-score-btn" class="btn"
           >High Scores</a
         >
       </div>
