--- a/rumble.html
+++ b/rumble.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rumble?</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="rumble.css" />
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./rumble.css"/>
   </head>
   <body>
     <h2 class="time main" style="text-align: center; margin-top: 0rem;"</h2></h2>
@@ -43,6 +43,6 @@
         </div>
       </div>
     </div>
-    <script src="rumble.js"></script>
+    <script src="./rumble.js"></script>
   </body>
 </html>
