put files in seaperate folders so pages will work... hopefully

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="./high-scores.js" id="high-score-btn" class="btn"
           >High Scores</a
         >
+        <!-- need to commit -->
       </div>
     </div>
   </body>
